# Transboundary_Opera

./: .gitignore  Dockerfile  README.md  opera_env.yml  pyproject.toml
.ipynb_checkpoints/: Dockerfile-checkpoint  README-checkpoint.md  pyproject-checkpoint.toml
code/: create-mintpy_cc.sh
code/process_data/: decompose_insar.ipynb  disp_ts_stacks.ipynb  nohup.out
code/process_data/.ipynb_checkpoints/: decompose_insar-checkpoint.ipynb  process_frame-checkpoint.py  run_all_frames-checkpoint.sh
code/source_data/: get_opera_disp.ipynb  temp.nc
code/source_data/.ipynb_checkpoints/: get_opera_data-checkpoint.py  get_opera_disp-checkpoint.ipynb
raw_data/: TBA_full.dbf  TBA_full.sbn  TBA_full.sbx  TBA_full.shp  TBA_full.shp.xml  TBA_full.shx
src/transboundary_opera/: decomposer.py  decomposition_tools.py  displacement_tools.py  run1_download_DISP_S1_Static.py  run2_prep_mintpy_opera.py
src/transboundary_opera/.ipynb_checkpoints/: decomposition_tools-checkpoint.py
