[project]
authors = [{name = "wc-caldwell", email = "clay.caldwell124@gmail.com"}]
dependencies = []
name = "Transboundary_Opera"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
transboundary_opera = { path = ".", editable = true }

[tool.pixi.feature.timeseries.dependencies]
python = "3.10.*"
mintpy = ">=1.6.3,<2"
geopandas = ">=1.1.1,<2"
h5py = ">=3.15.1,<4"

[tool.pixi.feature.timeseries.pypi-dependencies]
ipykernel = ">=7.1.0,<8"
rioxarray = ">=0.19.0,<0.20"
h5netcdf = ">=1.7.3,<2"
zarr = ">=2.18.3,<3"
rasterio = ">=1.4.3,<2"

[tool.pixi.feature.operainsar.dependencies]
python = "3.12.*"
pyproj = ">=3.7.2,<4"
matplotlib = ">=3.10.8,<4"
gdal = ">=3.12.0,<4"

[tool.pixi.feature.operainsar.pypi-dependencies]
ipykernel = ">=7.1.0,<8"
opera-utils = { version = ">=0.25.3,<0.26", extras = ["all"] }
dolphin = ">=0.42.0,<0.43.0"
xarray = ">=2025.11.0,<2026"
zarr = ">=3.1.5,<4"
asf-search = ">=10.2.0,<11"
rioxarray = ">=0.20.0,<0.21"
geopandas = ">=1.1.1,<2"
ipyleaflet = ">=0.20.0,<0.21"
ultraplot = ">=1.66.0,<2"
rich = { version = ">=4.2.0,<15", extras = ["jupyter"] }
boto3 = ">=1.42.8,<2"
botocore = ">=1.42.8,<2"
netcdf4 = ">=1.7.3,<2"
networkx = ">=3.6.1,<4"

[tool.pixi.environments]
operainsar = ["operainsar"]   
timeseries = ["timeseries"]

[tool.pixi.tasks]

